# academic-ime

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
academic_ime/: __init__.py  cli.py  config.py  corpus_loader.py  domain_profiles.py  gui.py  lexicon.py  pinyin_utils.py  rime_exporter.py  rime_setup.py  term_extractor.py  theme_manager.py  wordlist.py
academic_ime/themes/academic-blue/: README.md  weasel.custom.yaml
academic_ime/themes/cute-dog/: README.md  weasel.custom.yaml
academic_ime/themes/line-puppy/: README.md  weasel.custom.yaml
academic_ime/themes/minimal-dark/: README.md  weasel.custom.yaml
examples/: sample_falcon.txt
tests/: test_gui.py  test_pinyin_utils.py  test_rime_exporter.py  test_term_extractor.py  test_theme_manager.py
